Etapa4/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_DO
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TK_OC_GE
    TK_OC_EQ
    TK_OC_NE
    TK_OC_AND
    TK_OC_OR
    TK_OC_FORWARD_PIPE
    TK_OC_BASH_PIPE
    TOKEN_ERRO


Grammar

    0 $accept: program $end

    1 enter_scope: %empty

    2 exit_scope: %empty

    3 null_node: %empty

    4 program: %empty
    5        | grammars program

    6 grammars: global_var_declaration
    7         | function_declaration

    8 global_var_declaration: TK_PR_STATIC primitive_type identifier ';'
    9                       | primitive_type identifier ';'

   10 primitive_type: TK_PR_INT
   11               | TK_PR_FLOAT
   12               | TK_PR_CHAR
   13               | TK_PR_BOOL
   14               | TK_PR_STRING

   15 identifier: simple_identifier
   16           | vector

   17 simple_identifier: TK_IDENTIFICADOR

   18 vector: TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   19 function_declaration: TK_PR_STATIC primitive_type simple_identifier '(' function_parameters_list ')' command_block
   20                     | primitive_type simple_identifier '(' function_parameters_list ')' command_block

   21 function_parameters_list: %empty
   22                         | function_parameters_argument
   23                         | function_parameters_argument ',' function_parameters_list

   24 function_parameters_argument: TK_PR_CONST primitive_type simple_identifier
   25                             | primitive_type simple_identifier

   26 command_block: enter_scope '{' command_list '}' exit_scope

   27 command_list: command command_list
   28             | loops command_list
   29             | command_block
   30             | %empty

   31 command: if_statement
   32        | local_var_declaration ';'
   33        | shift_command ';'
   34        | assignment_command ';'
   35        | input_command ';'
   36        | output_command ';'
   37        | function_call ';'
   38        | command_return ';'
   39        | TK_PR_BREAK ';'
   40        | TK_PR_CONTINUE ';'

   41 modifiers: TK_PR_STATIC TK_PR_CONST
   42          | TK_PR_STATIC
   43          | TK_PR_CONST

   44 no_modifier: %empty

   45 local_var_declaration: modifiers primitive_type simple_identifier local_var_initialization
   46                      | primitive_type simple_identifier local_var_initialization no_modifier
   47                      | primitive_type simple_identifier null_node no_modifier

   48 function_call: simple_identifier '(' call_parameter_list ')'

   49 call_parameter_list: expression ',' call_parameter_list
   50                    | expression

   51 assignment_command: identifier '=' expression

   52 input_command: TK_PR_INPUT expression

   53 output_command: TK_PR_OUTPUT expression
   54               | TK_PR_OUTPUT expression_list

   55 shift: TK_OC_SL
   56      | TK_OC_SR

   57 shift_command: identifier shift expression

   58 command_return: TK_PR_RETURN expression

   59 if_statement: TK_PR_IF '(' expression ')' command_block null_node
   60             | TK_PR_IF '(' expression ')' command_block TK_PR_ELSE command_block

   61 command_block_loop: '{' command_block_loop '}'
   62                   | '{' '}'
   63                   | command

   64 loops: loop_for
   65      | loop_while

   66 loop_while: TK_PR_WHILE '(' expression ')' command_block_loop

   67 loop_for: TK_PR_FOR '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

   68 loop_for_command_list: loop_for_command ',' loop_for_command_list
   69                      | loop_for_command

   70 loop_for_command: local_var_declaration
   71                 | shift_command
   72                 | assignment_command

   73 expression_list: expression ',' expression_list
   74                | ',' expression

   75 literal: %empty

   76 expression: '(' expression ')'
   77           | '+' expression
   78           | '-' expression
   79           | '!' expression
   80           | '&' expression
   81           | '*' expression
   82           | '?' expression
   83           | '#' expression
   84           | expression '+' expression
   85           | expression '-' expression
   86           | expression '*' expression
   87           | expression '/' expression
   88           | expression '%' expression
   89           | expression '|' expression
   90           | expression '&' expression
   91           | expression '^' expression
   92           | expression '?' expression ':' expression

   93 local_var_initialization: TK_OC_LE literal

   94 expression: TK_IDENTIFICADOR
   95           | TK_LIT_INT
   96           | TK_LIT_FLOAT
   97           | TK_LIT_CHAR
   98           | TK_LIT_STRING
   99           | TK_LIT_TRUE
  100           | TK_LIT_FALSE


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 79
    '#' (35) 83
    '%' (37) 88
    '&' (38) 80 90
    '(' (40) 19 20 48 59 60 66 67 76
    ')' (41) 19 20 48 59 60 66 67 76
    '*' (42) 81 86
    '+' (43) 77 84
    ',' (44) 23 49 68 73 74
    '-' (45) 78 85
    '/' (47) 87
    ':' (58) 67 92
    ';' (59) 8 9 32 33 34 35 36 37 38 39 40
    '=' (61) 51
    '?' (63) 82 92
    '[' (91) 18
    ']' (93) 18
    '^' (94) 91
    '{' (123) 26 61 62
    '|' (124) 89
    '}' (125) 26 61 62
    error (256)
    TK_PR_INT <valor_lexico> (258) 10
    TK_PR_FLOAT <valor_lexico> (259) 11
    TK_PR_BOOL <valor_lexico> (260) 13
    TK_PR_CHAR <valor_lexico> (261) 12
    TK_PR_STRING <valor_lexico> (262) 14
    TK_PR_IF (263) 59 60
    TK_PR_THEN (264)
    TK_PR_ELSE (265) 60
    TK_PR_WHILE (266) 66
    TK_PR_DO (267)
    TK_PR_INPUT (268) 52
    TK_PR_OUTPUT (269) 53 54
    TK_PR_RETURN (270) 58
    TK_PR_CONST (271) 24 41 43
    TK_PR_STATIC (272) 8 19 41 42
    TK_PR_FOREACH (273)
    TK_PR_FOR (274) 67
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277) 39
    TK_PR_CONTINUE (278) 40
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TK_OC_LE (285) 93
    TK_OC_GE (286)
    TK_OC_EQ (287)
    TK_OC_NE (288)
    TK_OC_AND (289)
    TK_OC_OR (290)
    TK_OC_SL (291) 55
    TK_OC_SR (292) 56
    TK_OC_FORWARD_PIPE (293)
    TK_OC_BASH_PIPE (294)
    TK_LIT_INT (295) 18 95
    TK_LIT_FLOAT (296) 96
    TK_LIT_FALSE (297) 100
    TK_LIT_TRUE (298) 99
    TK_LIT_CHAR (299) 97
    TK_LIT_STRING (300) 98
    TK_IDENTIFICADOR <ast_node> (301) 17 18 94
    TOKEN_ERRO (302)


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    enter_scope (70)
        on left: 1
        on right: 26
    exit_scope (71)
        on left: 2
        on right: 26
    null_node <ast_node> (72)
        on left: 3
        on right: 47 59
    program <ast_node> (73)
        on left: 4 5
        on right: 0 5
    grammars <ast_node> (74)
        on left: 6 7
        on right: 5
    global_var_declaration <ast_node> (75)
        on left: 8 9
        on right: 6
    primitive_type <valor_lexico> (76)
        on left: 10 11 12 13 14
        on right: 8 9 19 20 24 25 45 46 47
    identifier <ast_node> (77)
        on left: 15 16
        on right: 8 9 51 57
    simple_identifier <ast_node> (78)
        on left: 17
        on right: 15 19 20 24 25 45 46 47 48
    vector <ast_node> (79)
        on left: 18
        on right: 16
    function_declaration <ast_node> (80)
        on left: 19 20
        on right: 7
    function_parameters_list <ast_node> (81)
        on left: 21 22 23
        on right: 19 20 23
    function_parameters_argument <ast_node> (82)
        on left: 24 25
        on right: 22 23
    command_block <ast_node> (83)
        on left: 26
        on right: 19 20 29 59 60
    command_list <ast_node> (84)
        on left: 27 28 29 30
        on right: 26 27 28
    command <ast_node> (85)
        on left: 31 32 33 34 35 36 37 38 39 40
        on right: 27 63
    modifiers <var_modifier> (86)
        on left: 41 42 43
        on right: 45
    no_modifier <var_modifier> (87)
        on left: 44
        on right: 46 47
    local_var_declaration <ast_node> (88)
        on left: 45 46 47
        on right: 32 70
    function_call <ast_node> (89)
        on left: 48
        on right: 37
    call_parameter_list <ast_node> (90)
        on left: 49 50
        on right: 48 49
    assignment_command <ast_node> (91)
        on left: 51
        on right: 34 72
    input_command <ast_node> (92)
        on left: 52
        on right: 35
    output_command <ast_node> (93)
        on left: 53 54
        on right: 36
    shift <ast_node> (94)
        on left: 55 56
        on right: 57
    shift_command <ast_node> (95)
        on left: 57
        on right: 33 71
    command_return <ast_node> (96)
        on left: 58
        on right: 38
    if_statement <ast_node> (97)
        on left: 59 60
        on right: 31
    command_block_loop <ast_node> (98)
        on left: 61 62 63
        on right: 61 66 67
    loops <ast_node> (99)
        on left: 64 65
        on right: 28
    loop_while <ast_node> (100)
        on left: 66
        on right: 65
    loop_for <ast_node> (101)
        on left: 67
        on right: 64
    loop_for_command_list <ast_node> (102)
        on left: 68 69
        on right: 67 68
    loop_for_command <ast_node> (103)
        on left: 70 71 72
        on right: 68 69
    expression_list <ast_node> (104)
        on left: 73 74
        on right: 54 73
    literal <ast_node> (105)
        on left: 75
        on right: 93
    expression <ast_node> (106)
        on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 94 95 96 97 98 99 100
        on right: 49 50 51 52 53 57 58 59 60 66 67 73 74 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
    local_var_initialization <ast_node> (107)
        on left: 93
        on right: 45 46


State 0

    0 $accept: . program $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 4 (program)

    program                 go to state 7
    grammars                go to state 8
    global_var_declaration  go to state 9
    primitive_type          go to state 10
    function_declaration    go to state 11


State 1

   10 primitive_type: TK_PR_INT .

    $default  reduce using rule 10 (primitive_type)


State 2

   11 primitive_type: TK_PR_FLOAT .

    $default  reduce using rule 11 (primitive_type)


State 3

   13 primitive_type: TK_PR_BOOL .

    $default  reduce using rule 13 (primitive_type)


State 4

   12 primitive_type: TK_PR_CHAR .

    $default  reduce using rule 12 (primitive_type)


State 5

   14 primitive_type: TK_PR_STRING .

    $default  reduce using rule 14 (primitive_type)


State 6

    8 global_var_declaration: TK_PR_STATIC . primitive_type identifier ';'
   19 function_declaration: TK_PR_STATIC . primitive_type simple_identifier '(' function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 12


State 7

    0 $accept: program . $end

    $end  shift, and go to state 13


State 8

    5 program: grammars . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 4 (program)

    program                 go to state 14
    grammars                go to state 8
    global_var_declaration  go to state 9
    primitive_type          go to state 10
    function_declaration    go to state 11


State 9

    6 grammars: global_var_declaration .

    $default  reduce using rule 6 (grammars)


State 10

    9 global_var_declaration: primitive_type . identifier ';'
   20 function_declaration: primitive_type . simple_identifier '(' function_parameters_list ')' command_block

    TK_IDENTIFICADOR  shift, and go to state 15

    identifier         go to state 16
    simple_identifier  go to state 17
    vector             go to state 18


State 11

    7 grammars: function_declaration .

    $default  reduce using rule 7 (grammars)


State 12

    8 global_var_declaration: TK_PR_STATIC primitive_type . identifier ';'
   19 function_declaration: TK_PR_STATIC primitive_type . simple_identifier '(' function_parameters_list ')' command_block

    TK_IDENTIFICADOR  shift, and go to state 15

    identifier         go to state 19
    simple_identifier  go to state 20
    vector             go to state 18


State 13

    0 $accept: program $end .

    $default  accept


State 14

    5 program: grammars program .

    $default  reduce using rule 5 (program)


State 15

   17 simple_identifier: TK_IDENTIFICADOR .
   18 vector: TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    '['  shift, and go to state 21

    $default  reduce using rule 17 (simple_identifier)


State 16

    9 global_var_declaration: primitive_type identifier . ';'

    ';'  shift, and go to state 22


State 17

   15 identifier: simple_identifier .
   20 function_declaration: primitive_type simple_identifier . '(' function_parameters_list ')' command_block

    '('  shift, and go to state 23

    $default  reduce using rule 15 (identifier)


State 18

   16 identifier: vector .

    $default  reduce using rule 16 (identifier)


State 19

    8 global_var_declaration: TK_PR_STATIC primitive_type identifier . ';'

    ';'  shift, and go to state 24


State 20

   15 identifier: simple_identifier .
   19 function_declaration: TK_PR_STATIC primitive_type simple_identifier . '(' function_parameters_list ')' command_block

    '('  shift, and go to state 25

    $default  reduce using rule 15 (identifier)


State 21

   18 vector: TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 26


State 22

    9 global_var_declaration: primitive_type identifier ';' .

    $default  reduce using rule 9 (global_var_declaration)


State 23

   20 function_declaration: primitive_type simple_identifier '(' . function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 27

    $default  reduce using rule 21 (function_parameters_list)

    primitive_type                go to state 28
    function_parameters_list      go to state 29
    function_parameters_argument  go to state 30


State 24

    8 global_var_declaration: TK_PR_STATIC primitive_type identifier ';' .

    $default  reduce using rule 8 (global_var_declaration)


State 25

   19 function_declaration: TK_PR_STATIC primitive_type simple_identifier '(' . function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 27

    $default  reduce using rule 21 (function_parameters_list)

    primitive_type                go to state 28
    function_parameters_list      go to state 31
    function_parameters_argument  go to state 30


State 26

   18 vector: TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 32


State 27

   24 function_parameters_argument: TK_PR_CONST . primitive_type simple_identifier

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 33


State 28

   25 function_parameters_argument: primitive_type . simple_identifier

    TK_IDENTIFICADOR  shift, and go to state 34

    simple_identifier  go to state 35


State 29

   20 function_declaration: primitive_type simple_identifier '(' function_parameters_list . ')' command_block

    ')'  shift, and go to state 36


State 30

   22 function_parameters_list: function_parameters_argument .
   23                         | function_parameters_argument . ',' function_parameters_list

    ','  shift, and go to state 37

    $default  reduce using rule 22 (function_parameters_list)


State 31

   19 function_declaration: TK_PR_STATIC primitive_type simple_identifier '(' function_parameters_list . ')' command_block

    ')'  shift, and go to state 38


State 32

   18 vector: TK_IDENTIFICADOR '[' TK_LIT_INT ']' .

    $default  reduce using rule 18 (vector)


State 33

   24 function_parameters_argument: TK_PR_CONST primitive_type . simple_identifier

    TK_IDENTIFICADOR  shift, and go to state 34

    simple_identifier  go to state 39


State 34

   17 simple_identifier: TK_IDENTIFICADOR .

    $default  reduce using rule 17 (simple_identifier)


State 35

   25 function_parameters_argument: primitive_type simple_identifier .

    $default  reduce using rule 25 (function_parameters_argument)


State 36

   20 function_declaration: primitive_type simple_identifier '(' function_parameters_list ')' . command_block

    $default  reduce using rule 1 (enter_scope)

    enter_scope    go to state 40
    command_block  go to state 41


State 37

   23 function_parameters_list: function_parameters_argument ',' . function_parameters_list

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 27

    $default  reduce using rule 21 (function_parameters_list)

    primitive_type                go to state 28
    function_parameters_list      go to state 42
    function_parameters_argument  go to state 30


State 38

   19 function_declaration: TK_PR_STATIC primitive_type simple_identifier '(' function_parameters_list ')' . command_block

    $default  reduce using rule 1 (enter_scope)

    enter_scope    go to state 40
    command_block  go to state 43


State 39

   24 function_parameters_argument: TK_PR_CONST primitive_type simple_identifier .

    $default  reduce using rule 24 (function_parameters_argument)


State 40

   26 command_block: enter_scope . '{' command_list '}' exit_scope

    '{'  shift, and go to state 44


State 41

   20 function_declaration: primitive_type simple_identifier '(' function_parameters_list ')' command_block .

    $default  reduce using rule 20 (function_declaration)


State 42

   23 function_parameters_list: function_parameters_argument ',' function_parameters_list .

    $default  reduce using rule 23 (function_parameters_list)


State 43

   19 function_declaration: TK_PR_STATIC primitive_type simple_identifier '(' function_parameters_list ')' command_block .

    $default  reduce using rule 19 (function_declaration)


State 44

   26 command_block: enter_scope '{' . command_list '}' exit_scope

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 45
    TK_PR_WHILE       shift, and go to state 46
    TK_PR_INPUT       shift, and go to state 47
    TK_PR_OUTPUT      shift, and go to state 48
    TK_PR_RETURN      shift, and go to state 49
    TK_PR_CONST       shift, and go to state 50
    TK_PR_STATIC      shift, and go to state 51
    TK_PR_FOR         shift, and go to state 52
    TK_PR_BREAK       shift, and go to state 53
    TK_PR_CONTINUE    shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 15

    '}'       reduce using rule 30 (command_list)
    $default  reduce using rule 1 (enter_scope)

    enter_scope            go to state 40
    primitive_type         go to state 55
    identifier             go to state 56
    simple_identifier      go to state 57
    vector                 go to state 18
    command_block          go to state 58
    command_list           go to state 59
    command                go to state 60
    modifiers              go to state 61
    local_var_declaration  go to state 62
    function_call          go to state 63
    assignment_command     go to state 64
    input_command          go to state 65
    output_command         go to state 66
    shift_command          go to state 67
    command_return         go to state 68
    if_statement           go to state 69
    loops                  go to state 70
    loop_while             go to state 71
    loop_for               go to state 72


State 45

   59 if_statement: TK_PR_IF . '(' expression ')' command_block null_node
   60             | TK_PR_IF . '(' expression ')' command_block TK_PR_ELSE command_block

    '('  shift, and go to state 73


State 46

   66 loop_while: TK_PR_WHILE . '(' expression ')' command_block_loop

    '('  shift, and go to state 74


State 47

   52 input_command: TK_PR_INPUT . expression

    TK_LIT_INT        shift, and go to state 75
    TK_LIT_FLOAT      shift, and go to state 76
    TK_LIT_FALSE      shift, and go to state 77
    TK_LIT_TRUE       shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_LIT_STRING     shift, and go to state 80
    TK_IDENTIFICADOR  shift, and go to state 81
    '!'               shift, and go to state 82
    '#'               shift, and go to state 83
    '&'               shift, and go to state 84
    '+'               shift, and go to state 85
    '-'               shift, and go to state 86
    '*'               shift, and go to state 87
    '?'               shift, and go to state 88
    '('               shift, and go to state 89

    expression  go to state 90


State 48

   53 output_command: TK_PR_OUTPUT . expression
   54               | TK_PR_OUTPUT . expression_list

    TK_LIT_INT        shift, and go to state 75
    TK_LIT_FLOAT      shift, and go to state 76
    TK_LIT_FALSE      shift, and go to state 77
    TK_LIT_TRUE       shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_LIT_STRING     shift, and go to state 80
    TK_IDENTIFICADOR  shift, and go to state 81
    '!'               shift, and go to state 82
    '#'               shift, and go to state 83
    '&'               shift, and go to state 84
    '+'               shift, and go to state 85
    '-'               shift, and go to state 86
    '*'               shift, and go to state 87
    '?'               shift, and go to state 88
    '('               shift, and go to state 89
    ','               shift, and go to state 91

    expression_list  go to state 92
    expression       go to state 93


State 49

   58 command_return: TK_PR_RETURN . expression
